--- a/jQueryDictionary.css
+++ b/jQueryDictionary.css
@@ -46,6 +46,10 @@ h4.name {
     font-size: 80%;
 }
 
+p.desc {
+    font-size: 120%;
+}
+
 pre {
     background-color: #FBF9EA;
     border: 1px solid #E2E1D5;
@@ -63,6 +67,15 @@ code {
     font-size: 70%;
     font-family: monaco,monospace;
     background-color: #eeeeee;
+}
+
+span.name {
+    font-size: 150%;
+}
+
+span.returns {
+    float: right;
+    font-style: italic;
 }
 
 span.column {
